# image-dec

./: CMakeLists.txt
arrows/: CMakeLists.txt  arrow.hpp  arrow.hpp~  arrow_test.cpp  arrow_traits.hpp  simple_launcher.hpp
geopt/: Makefile  Makefile~  core  dqr-10x10.mat  dqr-150x150.mat  memcheck  memcheck~  startup.m  startup.m~
geopt/matlab/: grad_grid2.m  grad_grid2.m~  spqr_grid2.mexglx
geopt/src/: givens.h  givens.h~  grid2.h  grid2.h~  macros.h  macros.h~  main.cpp  main.cpp~  perm.h  perm.h~  search.h  search.h~  sparse.c  sparse.c~  sparse.h  sparse.h~  sparse_qr_decomp.c  sparse_qr_decomp.cpp~  sparse_qr_decomp.c~  sparse_qr_decomp.h  sparse_qr_decomp.h~  spqr_mat.c  spqr_mat.cpp  spqr_mat.cpp~  spqr_mat.c~
geopt/src/mex/: sparse_mx.c  sparse_mx.c~  sparse_mx.h  sparse_mx.h~  spqr.c  spqr.c~  spqr_grid2.c  spqr_grid2.c~  spqr_mat.c  spqr_mat.c~
src/: Makefile  cube.hpp  grid2.hpp  grid_dissection_order.hpp  grid_topology.hpp  image_grad.hpp  image_io.hpp  image_mtl.hpp  image_sdl.hpp  image_types.hpp  image_vector.hpp  image_zoom.hpp  main.cpp  metamath.hpp  permutation.hpp  pow2.hpp  sparse_qr_grid.hpp  test.cpp  vectors.hpp
